tests/ui/type-alias-impl-trait/reveal_local.stderr
error: cannot check whether the hidden type of `reveal_local[9507]::Foo::{opaque#0}` satisfies auto traits
  --> $DIR/reveal_local.rs:12:15
   |
LL |     is_send::<Foo>();
   |               ^^^
   |
   = note: fetching the hidden types of an opaque inside of the defining scope is not supported. You can try moving the opaque type and the item that actually registers a hidden type into a new submodule
note: opaque type is declared here
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
note: required by a bound in `is_send`
  --> $DIR/reveal_local.rs:7:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error[E0283]: type annotations needed: cannot satisfy `Foo: Send`
  --> $DIR/reveal_local.rs:22:15
   |
LL |     is_send::<Foo>();
   |               ^^^
   |
   = note: cannot satisfy `Foo: Send`
note: required by a bound in `is_send`
  --> $DIR/reveal_local.rs:7:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
